# Visual-Data-Trustworthiness-Scoring-with-Ethical-Annotations

./: .gitignore  .pre-commit-config.yaml  ANNOTATION_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  Dockerfile  ETHICS.md  MODEL_CARD.md  Makefile  PRIVACY.md  README.md  RISK_REGISTER.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
dataset/: classify.dvc  unified.dvc
examples/: make_synthetic_video.py
outputs/logs/: frame_index.csv
scripts/: annotate_frames.py  auto_annotate.py  auto_label_tampered_videos.py  extract_frames.py  merge_dataset_for_training.py  preprocess.py  randomized_tamper_variants.py  real_trustworthiness_inference.py  tampering_crop.py  tampering_frame_skip.py
src/vdt_scoring/: __init__.py  config.py
src/vdt_scoring/ethics/: fairness_metrics.py
src/vdt_scoring/explain/: text.py  visual.py
src/vdt_scoring/governance/: logging.py
src/vdt_scoring/pipeline/: infer.py  train.py
src/vdt_scoring/privacy/: face_blur.py
src/vdt_scoring/schemas/: results_schema.json
src/vdt_scoring/scoring/: calibration.py  heuristics.py
src/vdt_scoring/utils/: video_io.py
tests/: test_schema.py  test_text.py  test_video_io.py
