[project]
name = "vdt-scoring"
version = "0.1.0"
description = "Visual Data Trustworthiness Scoring with Ethical Annotations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Your Name", email="you@example.com"}]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
